// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`types-task returns all the types (including nested) found in the app and outputs to JSON 1`] = `
Object {
  "meta": Object {
    "friendlyTaskName": "Project Types",
    "taskClassification": Object {
      "category": "insights",
      "priority": "high",
    },
    "taskName": "types",
  },
  "result": Object {
    "types": Array [
      Object {
        "data": Array [
          "addon/components/my-component.js",
          "lib/ember-super-button/addon/components/my-component.js",
        ],
        "displayName": "Components",
        "total": 2,
        "type": "components",
      },
      Object {
        "data": Array [
          "addon/controllers/my-controller.js",
          "lib/ember-super-button/addon/controllers/my-controller.js",
        ],
        "displayName": "Controllers",
        "total": 2,
        "type": "controllers",
      },
      Object {
        "data": Array [
          "addon/helpers/my-helper.js",
          "lib/ember-super-button/addon/helpers/my-helper.js",
        ],
        "displayName": "Helpers",
        "total": 2,
        "type": "helpers",
      },
      Object {
        "data": Array [
          "addon/initializers/my-initializer.js",
          "lib/ember-super-button/addon/initializers/my-initializer.js",
        ],
        "displayName": "Initializers",
        "total": 2,
        "type": "initializers",
      },
      Object {
        "data": Array [
          "addon/instance-initializers/my-helper.js",
          "lib/ember-super-button/addon/instance-initializers/my-helper.js",
        ],
        "displayName": "Instance Initializers",
        "total": 2,
        "type": "instance-initializers",
      },
      Object {
        "data": Array [
          "addon/mixins/my-mixin.js",
          "lib/ember-super-button/addon/mixins/my-mixin.js",
        ],
        "displayName": "Mixins",
        "total": 2,
        "type": "mixins",
      },
      Object {
        "data": Array [
          "addon/models/my-model.js",
          "lib/ember-super-button/addon/models/my-model.js",
        ],
        "displayName": "Models",
        "total": 2,
        "type": "models",
      },
      Object {
        "data": Array [
          "addon/routes/my-route.js",
          "lib/ember-super-button/addon/routes/my-route.js",
        ],
        "displayName": "Routes",
        "total": 2,
        "type": "routes",
      },
      Object {
        "data": Array [
          "addon/services/my-service.js",
          "lib/ember-super-button/addon/services/my-service.js",
        ],
        "displayName": "Services",
        "total": 2,
        "type": "services",
      },
      Object {
        "data": Array [
          "addon/templates/my-component.hbs",
          "lib/ember-super-button/addon/templates/my-component.hbs",
        ],
        "displayName": "Templates",
        "total": 2,
        "type": "templates",
      },
    ],
  },
}
`;

exports[`types-task returns all the types (including nested) found in the app and outputs to html 1`] = `
Array [
  TableData {
    "componentType": "table",
    "formattedResult": Array [
      Object {
        "result": Object {
          "name": "components",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "controllers",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "helpers",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "initializers",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "instance-initializers",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "mixins",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "models",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "routes",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "services",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "templates",
          "value": 2,
        },
        "rowClass": "bg-gray-100",
      },
    ],
    "meta": Object {
      "friendlyTaskName": "Project Types",
      "taskClassification": Object {
        "category": "insights",
        "priority": "high",
      },
      "taskName": "types",
    },
    "tableHeaders": Array [
      "name",
      "value",
    ],
  },
]
`;

exports[`types-task returns all the types (including nested) found in the app and outputs to the console 1`] = `
"=== Project Types ===

Types                 Total 
Components            2     
Controllers           2     
Helpers               2     
Initializers          2     
Instance Initializers 2     
Mixins                2     
Models                2     
Routes                2     
Services              2     
Templates             2     

"
`;

exports[`types-task returns all the types found in the app and outputs to JSON 1`] = `
Object {
  "meta": Object {
    "friendlyTaskName": "Project Types",
    "taskClassification": Object {
      "category": "insights",
      "priority": "high",
    },
    "taskName": "types",
  },
  "result": Object {
    "types": Array [
      Object {
        "data": Array [
          "addon/components/my-component.js",
        ],
        "displayName": "Components",
        "total": 1,
        "type": "components",
      },
      Object {
        "data": Array [
          "addon/controllers/my-controller.js",
        ],
        "displayName": "Controllers",
        "total": 1,
        "type": "controllers",
      },
      Object {
        "data": Array [
          "addon/helpers/my-helper.js",
        ],
        "displayName": "Helpers",
        "total": 1,
        "type": "helpers",
      },
      Object {
        "data": Array [
          "addon/initializers/my-initializer.js",
        ],
        "displayName": "Initializers",
        "total": 1,
        "type": "initializers",
      },
      Object {
        "data": Array [
          "addon/instance-initializers/my-helper.js",
        ],
        "displayName": "Instance Initializers",
        "total": 1,
        "type": "instance-initializers",
      },
      Object {
        "data": Array [
          "addon/mixins/my-mixin.js",
        ],
        "displayName": "Mixins",
        "total": 1,
        "type": "mixins",
      },
      Object {
        "data": Array [
          "addon/models/my-model.js",
        ],
        "displayName": "Models",
        "total": 1,
        "type": "models",
      },
      Object {
        "data": Array [
          "addon/routes/my-route.js",
        ],
        "displayName": "Routes",
        "total": 1,
        "type": "routes",
      },
      Object {
        "data": Array [
          "addon/services/my-service.js",
        ],
        "displayName": "Services",
        "total": 1,
        "type": "services",
      },
      Object {
        "data": Array [
          "addon/templates/my-component.hbs",
        ],
        "displayName": "Templates",
        "total": 1,
        "type": "templates",
      },
    ],
  },
}
`;

exports[`types-task returns all the types found in the app and outputs to html 1`] = `
Array [
  TableData {
    "componentType": "table",
    "formattedResult": Array [
      Object {
        "result": Object {
          "name": "components",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "controllers",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "helpers",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "initializers",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "instance-initializers",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "mixins",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "models",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "routes",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "services",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
      Object {
        "result": Object {
          "name": "templates",
          "value": 1,
        },
        "rowClass": "bg-gray-100",
      },
    ],
    "meta": Object {
      "friendlyTaskName": "Project Types",
      "taskClassification": Object {
        "category": "insights",
        "priority": "high",
      },
      "taskName": "types",
    },
    "tableHeaders": Array [
      "name",
      "value",
    ],
  },
]
`;

exports[`types-task returns all the types found in the app and outputs to the console 1`] = `
"=== Project Types ===

Types                 Total 
Components            1     
Controllers           1     
Helpers               1     
Initializers          1     
Instance Initializers 1     
Mixins                1     
Models                1     
Routes                1     
Services              1     
Templates             1     

"
`;
